# serial_bus_generator

./: CMakeLists.txt  Dockerfile  Dockerfile.test
include/serial_bus_generator/core/: data_generator.hpp
include/serial_bus_generator/interfaces/: generator_interface.hpp  message_interface.hpp
include/serial_bus_generator/messages/: base_message.hpp
include/serial_bus_generator/protocols/arinc429/: arinc429_generator.hpp  arinc429_message.hpp
include/serial_bus_generator/protocols/canj1939/: canj1939_generator.hpp  canj1939_message.hpp
scripts/: run_tests_in_docker.sh
src/: CMakeLists.txt  main.cpp
src/core/: data_generator.cpp
src/protocols/arinc429/: arinc429_generator.cpp  arinc429_message.cpp
src/protocols/canj1939/: canj1939_generator.cpp  canj1939_message.cpp
tests/: CMakeLists.txt
tests/unit/: test_generator_interface.cpp  test_message_interface.cpp
tests/unit/arinc429/: test_arinc429_generator.cpp  test_arinc429_message.cpp
tests/unit/canj1939/: test_canj1939_generator.cpp  test_canj1939_message.cpp
